--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "extension test",
+    "name": "extension de caritoDev! :)",
     "version": "1.0.0",
     "manifest_version": 3,
     "action": {
